<resources>
    <string name="app_name">Haptic Fitness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_back_stretch">Back Stretch</string>
    <string name="menu_squat">Squat</string>
    <string name="menu_side_stretch">Side Stretch</string>
    <string name="menu_rhythm_fitness">Rhythm Fitness</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>