<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rhythm_fitness"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_rhythm_fitness" />
        <item
            android:id="@+id/nav_back_stretch"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_back_stretch" />
        <item
            android:id="@+id/nav_side_stretch"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_side_stretch" />
        <item
            android:id="@+id/nav_squat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_squat" />
    </group>
</menu>