<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.csed433project.hapticfitness.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_rhythm_fitness"
            app:destination="@id/nav_rhythm_fitness" />
        <action
            android:id="@+id/action_nav_home_to_nav_back_stretch"
            app:destination="@id/nav_back_stretch" />
        <action
            android:id="@+id/action_nav_home_to_nav_squat"
            app:destination="@id/nav_squat" />
        <action
            android:id="@+id/action_nav_home_to_nav_side_stretch"
            app:destination="@id/nav_side_stretch" />

    </fragment>

    <fragment
        android:id="@+id/nav_rhythm_fitness"
        android:name="com.csed433project.hapticfitness.ui.rhythm_fitness.RhythmFitnessFragment"
        android:label="@string/menu_rhythm_fitness"
        tools:layout="@layout/rhythm_fitness"
        />
    <fragment
        android:id="@+id/nav_back_stretch"
        android:name="com.csed433project.hapticfitness.ui.back_stretch.BackStretchFragment"
        android:label="@string/menu_back_stretch"
        tools:layout="@layout/backstretch" />

    <fragment
        android:id="@+id/nav_squat"
        android:name="com.csed433project.hapticfitness.ui.squat.SquatFragment"
        android:label="@string/menu_squat"
        tools:layout="@layout/squat" />
    <fragment
        android:id="@+id/nav_side_stretch"
        android:name="com.csed433project.hapticfitness.ui.side_stretch.SideStretchFragment"
        android:label="@string/menu_side_stretch"
        tools:layout="@layout/sidestretch" />

</navigation>